# solitaire-penguin

./: .gitignore  Cargo.toml  Dioxus.toml  README.md  build.sh
assets/: main.css
docs/: index.html
docs/assets/: KaTeX_Suits-f62861bb3f9f2186.woff2.br  confetti.min-047f30793dd2f447.js.br  emoji_u1f427-349360930e1420b9.svg.br  emoji_u1f430-09a6c45861cb5e25.svg.br  emoji_u1f981-b99f4761d4d03905.svg.br  emoji_u1f98a-678c87b7d9d88a16.svg.br  main-63d40bd9ffb25d49.css  main-63d40bd9ffb25d49.css.br  main-76f410c25a2a4164.css  main-76f410c25a2a4164.css.br  main-9d7163e869bac614.css  main-9d7163e869bac614.css.br  main-f4490b1dd0713239.css  main-f4490b1dd0713239.css.br  solitaire-penguin-03869f1476e62343.js  solitaire-penguin-3fedaa1b17756d9b.js.br  solitaire-penguin-4d2710e8be5c1ba7.js  solitaire-penguin-5fdfd5325252537b.js.br  solitaire-penguin-96139627cf752a50.js.br  solitaire-penguin-9685a896735d2bad.js  solitaire-penguin-ab3014dc8d4d97c3.js  solitaire-penguin-ab3014dc8d4d97c3.js.br  solitaire-penguin-b3f8d9c44d0efa99.js  solitaire-penguin-c8a38f6dc58576aa.js.br  solitaire-penguin_bg-012bbab83122e434.wasm  solitaire-penguin_bg-012bbab83122e434.wasm.br  solitaire-penguin_bg-0e49ab116d3a4c35.wasm  solitaire-penguin_bg-0e49ab116d3a4c35.wasm.br  solitaire-penguin_bg-1209c60cc362de20.wasm  solitaire-penguin_bg-1209c60cc362de20.wasm.br  solitaire-penguin_bg-129798ee65eadbf8.wasm  solitaire-penguin_bg-129798ee65eadbf8.wasm.br  solitaire-penguin_bg-1a06201b83365925.wasm  solitaire-penguin_bg-1a06201b83365925.wasm.br  solitaire-penguin_bg-1d1ed4595701b2c9.wasm  (+85 more)
src/: main.rs
(+18 files in other folders)
